tests/e2e/service_call_as_output.error
Error: syntax error in story at line 1, column 6

1|    uuid generate as t
           ^^^^^^^^^^^^^

E0109: Inline service calls can't define an output
